5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1716_2496.log
== TEST (2019-05-07 17:00:28) 
-- CODE:
x = int(input("Digite um numero: "))
x = 0
while (not x == -1):
	x = x + x
x = int(input("Digite um numero: "))
	if (x = -1):
		print(x)
-- ERROR:
File "XXXX", line 6
    if (x = -1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:00:36) 
-- CODE:
x = int(input("Digite um numero: "))
x = 0
while (not x == -1):
	x = x + x
x = int(input("Digite um numero: "))
	if (x == -1):
		print(x)
-- ERROR:
File "XXXX", line 6
    if (x == -1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:01:31) 
-- CODE:
x = int(input("Digite um numero: "))
x = 0
while (not x == -1):
	x = x + x
	print(x)
x = int(input("Digite um numero: "))
	if (x == -1):
		print(x)
-- ERROR:
File "XXXX", line 7
    if (x == -1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:01:37) 
-- CODE:
x = int(input("Digite um numero: "))
x = 0
while (not x == -1):
	x = x + x
	print(x)
x = int(input("Digite um numero: "))
if (x == -1):
		print(x)
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:03:29) 
-- CODE:
x = int(input("Digite um numero: "))
y = 0
while (not x == -1):
	y = x + x
	print(y)
x = int(input("Digite um numero: "))
if (x == -1):
		print(x)
-- OUTPUT:
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-105
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:06:18) 
-- CODE:
x = int(input("Digite um numero: "))
y = 0
while (not x == -1):
	x = int(input("Digite um numero: "))
	print(y)
	y = x + x
if (x == -1):
	print(x)
-- OUTPUT:
0
2150
666
-18
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:06:43) 
-- CODE:
x = int(input("Digite um numero: "))
y = 0
while (not x == -1):
	x = int(input("Digite um numero: "))
	print(y)
	y = x + x
if (x == -1):
	print(x)
-- OUTPUT:
0
2150
666
-18
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:07:33) 
-- CODE:
x = int(input("Digite um numero: "))
y = 0
while (not x == -1):
	x = int(input("Digite um numero: "))
	y = x + x
	print(y)
	
if (x == -1):
	print(x)
-- OUTPUT:
2150
666
-18
-2
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:08:12) 
-- CODE:
x = int(input("Digite um numero: "))
y = 0
while (not x == -1):
	x = int(input("Digite um numero: "))
y = x + x
print(y)
	
if (x == -1):
	print(x)
-- OUTPUT:
-2
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:11:20) 
-- CODE:
x = int(input("Digite um numero: "))
y = 0
while (not x == -1):
	y = x + x
	print(y)
	
if (x == -1):
	print(x)
	
x = int(input("Digite um numero: "))
-- OUTPUT:
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-105
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:13:00) 
-- CODE:
x = int(input("Digite um numero: "))
y = 0
while (not x == -1):
	y = x + x
	print(y)
	
if (x == -1):
	print(x)
	
	x = int(input("Digite um numero: "))
-- OUTPUT:
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-105
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:23:06) 
-- CODE:
x = int(input("Digite um numero: "))
y = 0
while (not x == -1):
	y = x + x
	print(y)
	

-- OUTPUT:
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-105
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:31:00) 
-- CODE:
x = int(input("Digite um numero: "))
y = 0
while (not x == -1):
	x = x
	y = x + x
	print(y)
if (x == -1):
	
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:31:12) 
-- CODE:
x = int(input("Digite um numero: "))
y = 0
while (not x == -1):
	x = x
	y = x + x
	print(y)

	
	

-- OUTPUT:
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-105
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:22:40) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero'))
	acumuladora = acumuladora + numero
	
-- OUTPUT:
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-1050
-105
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:23:38) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	acumuladora = acumuladora + numero
print('Resultado da soma: ', acumuladora)
-- OUTPUT:
Resultado da soma:  873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:24:35) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	acumuladora = acumuladora + numero
print('Resultado da soma: ', acumuladora+1)
-- OUTPUT:
Resultado da soma:  874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:24:58) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	acumuladora = acumuladora + numero
print('Resultado da soma: ', acumuladora+1)
-- OUTPUT:
Resultado da soma:  874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 20:25:17) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	acumuladora = acumuladora + numero
print('Resultado da soma: ', acumuladora+1)
-- EXECUTION TIME:
0.142772
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
Resultado da soma:  874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
Resultado da soma:  0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Resultado da soma:  32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:26:35) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	if numero != -1
		acumuladora = acumuladora + numero
print('Resultado da soma: ', acumuladora)
-- ERROR:
File "XXXX", line 5
    if numero != -1
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:26:49) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	if numero != -1:
		acumuladora = acumuladora + numero
print('Resultado da soma: ', acumuladora)
-- OUTPUT:
Resultado da soma:  874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 20:27:04) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	if numero != -1:
		acumuladora = acumuladora + numero
print('Resultado da soma: ', acumuladora)
-- EXECUTION TIME:
0.134904
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
Resultado da soma:  874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
Resultado da soma:  0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
Resultado da soma:  32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:27:27) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	if numero != -1:
		acumuladora = acumuladora + numero
print(acumuladora)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 20:27:38) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	if numero != -1:
		acumuladora = acumuladora + numero
print(acumuladora)
-- EXECUTION TIME:
0.135601
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:11:11) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	if numero != -1:
		acumuladora = acumuladora + numero
print(acumuladora)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:06:53) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	acumuladora = acumuladora + numero
print(acumuladora)
-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:07:11) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	acumuladora = acumuladora + numero
print(acumuladora)
-- EXECUTION TIME:
0.151582
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
873
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
-1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32652
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:07:30) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	if numero != -1:
		acumuladora = acumuladora + numero
print(acumuladora)
-- EXECUTION TIME:
0.209987
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:08:08) 
-- CODE:
acumuladora = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	if numero != -1:
		acumuladora = acumuladora + numero
print(acumuladora)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    while numero != -1:
NameError: name 'numero' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:08:17) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	if numero != -1:
		acumuladora = acumuladora + numero
print(acumuladora)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:15:17) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	acumuladora = acumuladora + numero
print(acumuladora)
-- EXECUTION TIME:
0.129375
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
873
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
-1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32652
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:15:43) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	acumuladora = acumuladora + numero
print(acumuladora)
-- EXECUTION TIME:
0.149745
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
873
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
-1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32652
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:17:53) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	acumuladora = acumuladora + numero
	numero = int(input('Digite um numero: '))
print(acumuladora)
-- EXECUTION TIME:
0.158446
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:08:19) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	numero = int(input('Digite um numero: '))
	acumuladora = acumuladora + numero
print(acumuladora) 






-- EXECUTION TIME:
0.256375
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
873
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
-1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32652
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 06:00:08) 
-- CODE:
acumuladora = 0
numero = 0
while numero != -1:
	acumuladora = acumuladora + numero
	numero = int(input('Digite um numero: '))
print(acumuladora) 






-- EXECUTION TIME:
0.206305
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
